--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
     "typescript": "^5"
   },
   "browserslist": [
-    "last 2 Chrome versions",
-    "last 2 Firefox versions",
-    "last 2 Edge versions",
-    "last 2 Safari versions",
-    "not dead"
+    "chrome >= 100",
+    "safari >= 16",
+    "firefox >= 100",
+    "edge >= 100",
+    "ios >= 16"
   ]
 }
